<resources>
    <string name="app_name">My Own Vocabulary Notebook</string>
    <string name="text_add">Add Note</string>
    <string name="text_game">Game Note</string>
    <string name="text_setting">Setting</string>
    <string name="text_hint_title">Title: Toeic Voca</string>
    <string name="text_hint_memo">Memo</string>
    <string name="text_save">Save</string>
    <string name="text_import">Import</string>
    <string name="text_item_add">Item Add</string>
    <string name="text_hint_key">Key</string>
    <string name="text_hint_value">Value</string>
    <string name="text_random">Random</string>
    <string name="text_start_game">Start Game</string>
    <string name="text_add_note">Add Note</string>
    <string name="text_edit_note">Edit Note</string>
    <string name="text_back">Back</string>
    <string name="text_use_translation">use Translation</string>
    <string name="text_key">key</string>
    <string name="text_value">value</string>
    <string name="text_label_key">key: </string>
    <string name="text_label_value">value: </string>
    <string name="text_flip">flip</string>
    <string name="text_exam">exam</string>
    <string name="text_title_note_item_import_description">How to import Excel data</string>
    <string name="text_content_note_item_import_description">
        ※ You must create a file in the following format when you can import it. \n
        1. Create an Excel file in xlsx format.(recommended xlsx format) \n
        2. Set the sheet name to \'result\'. \n
        3. Set A1 to \'key\' and B1 to \'value\'. \n
        4. Then write key in column A and value in column B. \n
        5. Then import the Excel file.
    </string>
    <string name="text_insert_note_item_success">Insert Note Item Success!</string>
    <string name="text_delete_note_success">Delete Note Success!</string>
    <string name="text_result">result</string>
    <string name="text_temp">TEMP</string>
    <string name="text_edit">EDIT</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_delete">DELETE</string>
    <string name="text_export">EXPORT</string>
    <string name="text_view">VIEW</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_save_success">saving success!</string>
    <string name="text_save_failed">saving failed!</string>
    <string name="text_empty_item">item list is empty. please add item in edit note</string>
    <string name="text_select_equal_language">The key language and value language cannot be the same.</string>
    <string name="text_fail_import_excel">Fail to import excel!</string>
    <string name="text_opensource_license">Open Source License</string>
    <string name="text_personal_information_processing_policy">Personal information processing policy</string>
    <string name="text_customer_suggestions">Customer Suggestions</string>
    <string name="text_hint_email_subject">Subject: </string>
    <string name="text_hint_email_text">Text: </string>
    <string name="text_developer_email" translatable="false">tla149.dev@gmail.com</string>
    <string name="text_send">Send</string>
    <string name="text_send_email_vaildate_fail">Please check the title entry and the content entry.</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_terms_and_conditions">Terms and Conditions</string>
    <string name="text_privacy_policy_md" translatable="false">
    **Privacy Policy** 
simjh built the My Own Vocabulary Notebook app as an Ad Supported app. This SERVICE is provided by simjh at no cost and is intended for use as is. 
This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service. 
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy. 
 
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at My Own Vocabulary Notebook unless otherwise defined in this Privacy Policy. 
**Information Collection and Use** 
For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to simjh. The information that I request will be retained on your device and is not collected by me in any way. 
The app does use third-party services that may collect information used to identify you. 
Link to the privacy policy of third-party service providers used by the app 
*   [Google Play Services](https://www.google.com/policies/privacy/) 
*   [AdMob](https://support.google.com/admob/answer/6128543?hl=en) 
**Log Data** 
I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics. 
**Cookies** 
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. 
This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service. 
 
**Service Providers** 
I may employ third-party companies and individuals due to the following reasons: 
*   To facilitate our Service; 
*   To provide the Service on our behalf; 
*   To perform Service-related services; or 
*   To assist us in analyzing how our Service is used. 
I want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose. 
**Security** 
I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security. 
**Links to Other Sites** 
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services. 
**Children’s Privacy** 
These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions. 
**Changes to This Privacy Policy** 
I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. 
This policy is effective as of 2023-06-14 
**Contact Us** 
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at tla149.dev@gmail.com. 
This privacy policy page was created at [privacypolicytemplate.net](https://privacypolicytemplate.net) and modified/generated by [App Privacy Policy Generator](https://app-privacy-policy-generator.nisrulz.com/) 
    </string>
</resources>