<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_wrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginVertical="10dp"
            android:hint="@string/text_hint_title"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/et_memo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.8" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_memo"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginVertical="10dp"
            android:hint="@string/text_hint_memo"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/swi_use_translation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_title"
            app:layout_constraintWidth_percent="0.8" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swi_use_translation"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/text_use_translation"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/layout_select_translation_language"
            app:layout_constraintEnd_toEndOf="@+id/et_memo"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/et_memo"
            app:layout_constraintTop_toBottomOf="@+id/et_memo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_select_translation_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swi_use_translation"
            app:layout_constraintWidth_percent="0.8">

            <TextView
                android:id="@+id/label_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/text_label_key"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinner_key"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/label_value"
                app:layout_constraintStart_toEndOf="@+id/label_key"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/text_label_value"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinner_value"
                app:layout_constraintStart_toEndOf="@+id/spinner_key"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_value"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginVertical="10dp"
            android:text="@string/text_save"
            app:backgroundTint="@color/app_main_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_select_translation_language"
            app:layout_constraintWidth_percent="0.6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginVertical="10dp"
            android:text="@string/text_back"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_save"
            app:layout_constraintTop_toTopOf="@+id/btn_save"
            app:layout_constraintWidth_percent="0.2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>