<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_wrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_top"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/layout_top_margin_top"
            app:layout_constraintBottom_toTopOf="@+id/layout_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_light_background"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="5dp"
                    android:text="@string/text_back"
                    android:textColor="@color/black" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_top"
            app:layout_constraintWidth_percent="0.8">

            <TextView
                android:id="@+id/tv_to_developer"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:autoSizeTextType="uniform"
                android:lines="1"
                android:text="@{`To: ` + @string/text_developer_email}"
                android:textColor="@color/app_main_color"
                app:layout_constraintBottom_toTopOf="@+id/et_subject"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_subject"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginVertical="10dp"
                android:hint="@string/text_hint_email_subject"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                app:layout_constraintBottom_toTopOf="@+id/et_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_to_developer" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:gravity="start|top"
                android:hint="@string/text_hint_email_text"
                app:layout_constraintBottom_toTopOf="@+id/btn_send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_subject" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginVertical="10dp"
                android:text="@string/text_send"
                app:backgroundTint="@color/app_main_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>