<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_sub_color"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_monochrome"
            app:layout_constraintBottom_toTopOf="@+id/layout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_add"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:background="@color/cardview_light_background"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/app_main_color"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toTopOf="@+id/card_view_game"
                app:layout_constraintDimensionRatio="1:0.8"
                app:layout_constraintEnd_toStartOf="@+id/card_view_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent="0.3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical|center_horizontal"
                    android:lines="1"
                    android:padding="10dp"
                    android:text="@string/text_add"
                    android:textColor="@color/white" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_edit"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:background="@color/cardview_light_background"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/app_main_color"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toTopOf="@+id/card_view_setting"
                app:layout_constraintDimensionRatio="1:0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_view_add"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent="0.3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical|center_horizontal"
                    android:lines="1"
                    android:padding="10dp"
                    android:text="@string/text_edit_note"
                    android:textColor="@color/white" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_game"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:background="@color/cardview_light_background"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/app_main_color"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:0.8"
                app:layout_constraintEnd_toStartOf="@+id/card_view_setting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_add"
                app:layout_constraintWidth_percent="0.3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical|center_horizontal"
                    android:lines="1"
                    android:padding="10dp"
                    android:text="@string/text_game"
                    android:textColor="@color/white" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_setting"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:background="@color/cardview_light_background"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/app_main_color"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_view_game"
                app:layout_constraintTop_toBottomOf="@+id/card_view_edit"
                app:layout_constraintWidth_percent="0.3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical|center_horizontal"
                    android:lines="1"
                    android:padding="10dp"
                    android:text="@string/text_setting"
                    android:textColor="@color/white" />

            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>